# vibe_erc20_rust_massa

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
contracts/erc20-token/: Cargo.toml
contracts/erc20-token/src/: lib.rs
tests/erc20-tests/: Cargo.toml
tests/erc20-tests/src/: lib.rs
